cmake_minimum_required( VERSION 3.16 )

add_library( raylib INTERFACE )
target_include_directories( raylib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include" )
if (WIN32)
	target_link_libraries( raylib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/lib/win64/raylib.lib" winmm )
elseif (EMSCRIPTEN)
	target_link_libraries( raylib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/lib/html5/libraylib.a" )
endif()
target_precompile_headers( raylib INTERFACE <raylib.h> <raymath.h> )
